Remove `mode` option, and logs in merging, and `SpeedUP.java`