@@ -17,9 +17,7 @@ import java.nio.file.Paths;
 import java.util.*;
 
 public class WorkingArea implements IWorkingArea {
-//    public final static String WD = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
-
-    public final static String WD = App.mode == "dev" ? Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString() : Path.of(System.getProperty("user.dir")).toString();
+    public final static String WD = Path.of(System.getProperty("user.dir")).toString();
 
     private final static List<String> excludedFiles = new ArrayList<>() {
         {
@@ -40,20 +38,10 @@ public class WorkingArea implements IWorkingArea {
     }
 
     public static List<String> getWorkingFiles() {
-        String WD_DEV = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
-
-        if (App.mode.equals("Dev")) {
-            return Utils.plainFilenamesIn(WD_DEV);
-        }
         return Utils.plainFilenamesIn(WD);
     }
 
     public static Path getPath(String file) {
-        String WD_DEV = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
-
-        if (App.mode.equals("Dev")) {
-            return Path.of(WD_DEV, file);
-        }
         return Path.of(WD, file);
     }
 
@@ -62,18 +50,8 @@ public class WorkingArea implements IWorkingArea {
     }
 
     public static void remove(String file) {
-        Path filePath = null;
-        String WD_DEV = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
-
-        if (App.mode.equals("Dev")) {
-            filePath = Path.of(WD_DEV, file);
-
-        } else {
-            filePath = Path.of(WD, file);
-        }
-
         try {
-            Files.deleteIfExists(filePath);
+            Files.deleteIfExists(Path.of(WD, file));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -81,15 +59,8 @@ public class WorkingArea implements IWorkingArea {
 
     @Override
     public String getFileHash(String targetFile) {
-        Path path = null;
-        String WD_DEV = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
+        Path path = Paths.get(WD, targetFile);
 
-        if (App.mode.equals("Dev")) {
-            path = Paths.get(WD_DEV, targetFile);
-
-        } else {
-            path = Paths.get(WD, targetFile);
-        }
         if (Files.exists(path)) {
             byte[] pathContent = Utils.readContents(path.toFile());
             return Utils.sha1(pathContent);
@@ -100,18 +71,7 @@ public class WorkingArea implements IWorkingArea {
 
     @Override
     public boolean isFileExist(String file) {
-
-        Path path = null;
-        String WD_DEV = Path.of(System.getProperty("user.dir"), "TEMP_TEST").toString();
-
-        if (App.mode.equals("Dev")) {
-            path = Paths.get(WD_DEV, file);
-
-        } else {
-            path = Paths.get(WD, file);
-        }
-
-        return Files.exists(path);
+        return Files.exists(Paths.get(WD, file));
     }
 
     @Override
